@@ -1,7 +1,10 @@
 $Id$
 
-2009-07-14  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2009-07-21  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* asyncproc.py evtloop.py: Do use threading.Event, the low performance
+	is actually caused by thread starvation: insert a sleep(). No change
+	on Windows performance.
 	* asyncproc.py evtloop.py: Do not use threading.Event and improve
 	select emulation performance on linux.
 	* netbeans.py: Fix netbeans.remove_bug is a string, not a boolean.
